--- a/_src/components/clinical-study/styles.scss
+++ b/_src/components/clinical-study/styles.scss
@@ -33,10 +33,10 @@
         &-meta {
             @include typestyle-small;
 
-            position: absolute;
-            right: 3.3em;
-            bottom: 2em;
-            color: var(--color--background);
+            // position: absolute;
+            // right: 3.3em;
+            // bottom: 2em;
+            // color: var(--color--background);
             font-weight: var(--type--1--font-weight--bold);
         }
     }
