--- a/_src/components/links/styles-main.scss
+++ b/_src/components/links/styles-main.scss
@@ -1,5 +1,6 @@
 .links {
     --grid--row-gap: var(--space--xxxs);
+    --links--icon--size: #{rem(40)};
 
     $this: &;
 
@@ -10,12 +11,16 @@
     &__heading {
         --heading--margin-bottom: 0;
 
-        grid-column: 1 / 3;
+        @include mq(large) {
+            grid-column: 1 / 3;
+        }
     }
 
     &__content {
         + #{$this}__items {
-            grid-column: 2;
+            @include mq(large) {
+                grid-column: 2;
+            }
 
             @include mq(medium) {
                 --grid--columns: 1;
@@ -26,11 +31,12 @@
     &__items {
         @include grid(1, 3);
 
-        grid-column: 1 / 3;
+        @include mq(large) {
+            grid-column: 1 / 3;
+        }
     }
 
     &.type--ticks {
-        --links--icon--size: #{rem(40)};
 
         #{$this}__inner {
             @include mq(medium) {
@@ -82,6 +88,7 @@
         &__content {
             @include no-first-last-margin;
 
+            width: 100%;
             max-width: var(--width--xxs);
         }
     }
