--- a/_src/components/site-header/styles-main.scss
+++ b/_src/components/site-header/styles-main.scss
@@ -204,7 +204,7 @@ $site-header--top--background: 'white';
 
         @include mq($until: 'site-header') {
             grid-area: strapline;
-            justify-self: flex-start;
+            justify-self: center;
         }
     }
 
