--- a/_src/components/site-header/styles/_header-menu.scss
+++ b/_src/components/site-header/styles/_header-menu.scss
@@ -184,6 +184,8 @@
 
         a {
             @include mq($until: 'site-header') {
+                --link--text-decoration: underline;
+
                 @include typestyle-h4;
             }
         }
