--- a/_src/components/team/styles.scss
+++ b/_src/components/team/styles.scss
@@ -2,7 +2,7 @@
 
 .team {
     --resellers--icon--size: #{rem(25)};
-    --team--media--ratio: 1 / 1;
+    --team--media--ratio: 3 / 2;
     --team--media--size: #{rem(150)};
     --team--inner--padding: var(--space--s);
 
@@ -22,8 +22,8 @@
         }
 
         &__heading {
-            padding-right: calc(var(--team--media--size) + var(--space--xxs));
-            margin-bottom: var(--space--xxs);
+            --heading--margin-top: var(--space--xs);
+
             line-height: 1;
         }
 
@@ -59,11 +59,6 @@
         }
 
         &__image {
-            position: absolute;
-            top: calc((var(--team--inner--padding) + var(--space--s)) * -1);
-            right: var(--team--inner--padding);
-            width: var(--team--media--size);
-            height: var(--team--media--size);
             aspect-ratio: var(--team--media--ratio);
             overflow: visible;
 
