--- a/_src/styles/2-variables/_button-variables.scss
+++ b/_src/styles/2-variables/_button-variables.scss
@@ -21,5 +21,10 @@
     --button--small--padding-y: 0;
     --button--small--padding-x: 0.7em;
 
-    --button--icon-size: 1.4em;
+    --button--icon-size: 1em;
+
+    @include mq(large) {
+        --button--icon-size: 1.4em;
+
+    }
 }
