--- a/_src/components/core-blocks/_wp-block-image.scss
+++ b/_src/components/core-blocks/_wp-block-image.scss
@@ -7,8 +7,7 @@
 
     &:not(.alignfull) {
         > img {
-            @include box-shadow;
-            @include rounded-corners;
+            border: 2px solid var(--color--seafoam);
         }
     }
 }
