--- a/_src/components/team/styles.scss
+++ b/_src/components/team/styles.scss
@@ -18,7 +18,11 @@
         position: relative;
 
         &.has-background {
-            padding: var(--team--inner--padding);
+            padding: var(--team--inner--padding) var(--block--padding-x);
+
+            @include mq(medium) {
+                padding: var(--team--inner--padding);
+            }
         }
 
         &__heading {
