--- a/_src/components/site-footer/styles-main.scss
+++ b/_src/components/site-footer/styles-main.scss
@@ -4,23 +4,18 @@
     --site-footer__images--aspect-ratio: 28 / 13;
     --site-footer--logo-width: #{rem(120)};
 
-
-    @include mq(large) {
-        --site-footer--logo-width: #{rem(388)};
-    }
-
     $this: &;
     $footer-breakpoint--small: 400px;
 
     padding-top: var(--space--l);
     padding-bottom: var(--space--l);
 
-    &__inner {
-        @include grid(1, 2);
+    @include mq(large) {
+        --site-footer--logo-width: #{rem(388)};
     }
 
-    &__top {
-
+    &__inner {
+        @include grid(1, 2);
     }
 
     &__logo {
@@ -31,9 +26,11 @@
             width: 100%;
             aspect-ratio: 388 / 74;
 
+            /* stylelint-disable selector-max-compound-selectors */
             > svg path {
                 fill: var(--color--foreground);
             }
+            /* stylelint-enable selector-max-compound-selectors */
 
             .pill {
                 fill: var(--color--seafoam);
