--- a/_src/components/card/styles-main.scss
+++ b/_src/components/card/styles-main.scss
@@ -206,7 +206,7 @@
             padding-top: 0;
         }
 
-        &-hospital {
+        &#{$this}--type--testimonial-hospital {
             --accent--color: var(--color--seafoam);
         }
 
