amends quote icon

--- a/_src/components/cards/styles-main.scss
+++ b/_src/components/cards/styles-main.scss
@@ -197,6 +197,7 @@
             scroll-snap-align: center;
 
             @include mq(small) {
+                min-height: #{rem(150)};
                 flex-basis: 42%;
             }
 
